backend/backend.err
Error: SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (C:\Users\piyu4\OneDrive\Desktop\Epics\backend\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\piyu4\OneDrive\Desktop\Epics\backend\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:213:14)
    at invokeCallback (C:\Users\piyu4\OneDrive\Desktop\Epics\backend\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\piyu4\OneDrive\Desktop\Epics\backend\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\piyu4\OneDrive\Desktop\Epics\backend\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  expose: true,
  statusCode: 400,
  status: 400,
  body: '{\\',
  type: 'entity.parse.failed'
}
^C^C